fixed images not showing properly on chrome

--- a/css/albums.css
+++ b/css/albums.css
@@ -78,6 +78,7 @@
 
     #custom-album {
         width: 49%;
+        height: 49%;
     }
 
     .albums {
